patient mappers and controller