@@ -1,7 +1,9 @@
 package com.team27.pillmaxxer.repositories;
 
+import com.google.cloud.firestore.DocumentSnapshot;
 import com.google.cloud.firestore.Firestore;
 import com.google.cloud.firestore.Query;
+import com.team27.pillmaxxer.dto.PatientMapper;
 import com.team27.pillmaxxer.model.Patient;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
@@ -9,6 +11,7 @@ import org.springframework.stereotype.Repository;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.ExecutionException;
+import java.util.stream.Collectors;
 
 @Repository
 public class PatientRepository implements FirestoreRepository<Patient, String> {
@@ -16,29 +19,35 @@ public class PatientRepository implements FirestoreRepository<Patient, String> {
     private static final String COLLECTION_NAME = "patients";
 
     private final Firestore firestore;
+    private final PatientMapper mapper;
 
     @Autowired
-    public PatientRepository(Firestore firestore) {
+    public PatientRepository(Firestore firestore, PatientMapper mapper) {
         this.firestore = firestore;
+        this.mapper = mapper;
     }
 
     @Override
     public Patient save(Patient entity) throws ExecutionException, InterruptedException {
         firestore.collection(COLLECTION_NAME)
                 .document(entity.getPatientId())
-                .set(entity)
+                .set(mapper.toFirestoreMap(entity))
                 .get();
         return entity;
     }
 
     @Override
     public Optional<Patient> findById(String id) throws ExecutionException, InterruptedException {
-        return Optional.ofNullable(
-                firestore.collection(COLLECTION_NAME)
-                        .document(id)
-                        .get()
-                        .get()
-                        .toObject(Patient.class));
+        DocumentSnapshot document = firestore.collection(COLLECTION_NAME)
+                .document(id)
+                .get()
+                .get();
+
+        if (!document.exists()) {
+            return Optional.empty();
+        }
+
+        return Optional.of(mapper.fromFirestoreDocument(document));
     }
 
     @Override
@@ -48,8 +57,8 @@ public class PatientRepository implements FirestoreRepository<Patient, String> {
                 .get()
                 .getDocuments()
                 .stream()
-                .map(document -> document.toObject(Patient.class))
-                .toList();
+                .map(mapper::fromFirestoreDocument)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -58,8 +67,8 @@ public class PatientRepository implements FirestoreRepository<Patient, String> {
                 .get()
                 .getDocuments()
                 .stream()
-                .map(document -> document.toObject(Patient.class))
-                .toList();
+                .map(mapper::fromFirestoreDocument)
+                .collect(Collectors.toList());
     }
 
     @Override
